# inversion-api-codegen-rust

./: Cargo.toml  README.md
crates/inversion_api_codegen/: Cargo.toml
crates/inversion_api_codegen/src/: lib.rs
crates/inversion_api_codeload/: Cargo.toml
src/: lib.rs  util.rs
